test/e2e/features/faultinjection/testdata/tp-fault-abort.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: tp-fault-abort
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: fault-route
  faultInjection:
    abort:
      httpStatus: 503
      percentage: 100
