test/e2e/features/faultinjection/testdata/tp-fault-delay.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: tp-fault-delay
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: fault-route
  faultInjection:
    delay:
      fixedDelay: "100ms"
      percentage: 100
