test/e2e/features/faultinjection/testdata/tp-fault-disable-route.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: tp-fault-disable-route
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: no-fault-route
  faultInjection:
    disable: {}
